<resources>
    <string name="app_name">TranslateIt</string>
    <string name="please_select_the_language_you_want_to_translate">Please select the language you want to translate</string>
    <string name="arrow_forward">Arrow Forward</string>
    <string name="translate">Translate</string>
    <string name="type_here">Type here ...</string>
    <string name="say_something">Say something</string>
    <string name="voice_icon">Voice Icon</string>
</resources>